--- a/app/views/publish_mailer/published_email.text.haml
+++ b/app/views/publish_mailer/published_email.text.haml
@@ -1,11 +1,12 @@
-="Your work has been published by #{@user.email}"
-\-------------------------------------------------
+Thank you for depositing your article,
+= @publication.web_of_science_source_record.record.title.first
+, in ScholarsArchive@OSU.
 
-- @publication.web_of_science_source_record.record.title.each do |t|
-  = t
-  \-------------------------------------------------
-
-Repository:
+The permanent URL for your article is:
 = @publication.pub_url
-Easy Deposit:
-= publication_url(@publication)
+
+If you have any further questions, concerns, or feedback about your experience with ScholarsArchive@OSU or the OSU Open Access Policy, please contact us at
+scholarsarchive@oregonstate.edu
+
+Best,
+The OSU Libraries Digital Repository Team
