--- a/app/views/publications/_record.html.haml
+++ b/app/views/publications/_record.html.haml
@@ -26,6 +26,10 @@
         %td
           %ul
             %li= r[:uid]
+        %th.text-align-right{ scope: 'row' } abstract
+        %td
+          %ul
+            %li= @publication[:abstract]
       - r.publication[:pub_hash].each_pair do |k,v|
         %tr
           %th.text-align-right{ scope: 'row' }= k
