--- a/app/views/publications/_record.html.haml
+++ b/app/views/publications/_record.html.haml
@@ -26,12 +26,11 @@
         %td
           %ul
             %li= r[:uid]
+      %tr
         %th.text-align-right{ scope: 'row' } abstract
         %td
           %ul
-            %li
-              = @publication.parsed_abstract
-              %div.hidden{ style: 'display: none;' }= @publication[:abstract]
+            %li= @publication[:abstract]
       - r.publication[:pub_hash].each_pair do |k,v|
         %tr
           %th.text-align-right{ scope: 'row' }= k
