fixing error details and style

--- a/app/assets/stylesheets/flash_messages.scss
+++ b/app/assets/stylesheets/flash_messages.scss
@@ -10,6 +10,6 @@
   background-color: $success-green-light;
 }
 .alert-warn {
-  color: $warn-yellow-dark;
-  background-color: $warn-yellow-light;
+  color: #ffffff;
+  background-color: $warn-light;
 }
