--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -13,5 +13,4 @@ $bs-gray-light: rgba(0, 0, 0, 0.125);
 $bs-orange: #f0ad4e;
 $success-green-dark: #2fab29;
 $success-green-light: #ddf8d7;
-$warn-yellow-dark: #7d7d3f;
-$warn-yellow-light: #e6e358;
+$warn-light: #5aa7f5;
