published date content and style

--- a/app/views/publications/_record.html.haml
+++ b/app/views/publications/_record.html.haml
@@ -7,8 +7,8 @@
     %span (fingerprint)
     %span= r[:source_fingerprint]
 .published
-  - if @publication.published?
-    %span= "Published: #{@publication[:pub_at]}"
+  - if @publication.published? || @publication.publication_exists?
+    %span= t('publications.publication_date_message', pub_at: @publication[:pub_at])
     - if @publication[:pub_url]
       %br
       %a{ href: @publication[:pub_url], target: '_blank' }= @publication[:pub_url]
