Controller and Mailer to use hashed author email to claim publication

--- a/app/views/article_recruit_mailer/recruit_email.text.haml
+++ b/app/views/article_recruit_mailer/recruit_email.text.haml
@@ -5,7 +5,7 @@ http://cdss.library.oregonstate.edu/sites/default/files/osu_openacesspolicy_fina
 As part of this policy, faculty are asked to deposit their journal articles into ScholarsArchive@OSU to make OSU's research publicly available and increase the reach and impact of our scholarship.
 
 We invite you to deposit your article using this link:
-= claim_url(@publication.web_of_science_source_record[:hashed_uid])
+= claim_url(@author_publication[:claim_link])
 
 Once there, you may upload your article and, publish the article to ScholarsArchive@OSU. For guidance on the version of the article you are allowed to upload, see our deposit guide.
 https://guides.library.oregonstate.edu/Scholars-Archive/FacultyArticles
