--- a/app/views/article_recruit_mailer/recruit_email.html.haml
+++ b/app/views/article_recruit_mailer/recruit_email.html.haml
@@ -2,19 +2,27 @@
   Congratulations on your new publication -
   %i= @publication.web_of_science_source_record.record.title.first
 %p
-  The Faculty Senate at Oregon State University passed an Open Access Policy in June 2013
-  %a{ href: 'http://cdss.library.oregonstate.edu/sites/default/files/osu_openacesspolicy_final_single_page.pdf' } http://cdss.library.oregonstate.edu/sites/default/files/osu_openacesspolicy_final_single_page.pdf.
-  As part of this policy, faculty are asked to deposit their journal articles into ScholarsArchive@OSU to make OSU's research publicly available and increase the reach and impact of our scholarship.
+  As part of OSU’s Open Access Policy, faculty are asked to deposit their journal articles into ScholarsArchive@OSU.
+  This makes your research publicly available and increases the reach and impact of your scholarship.
 %p
-  We invite you to deposit your article using this link:
+  The link below will take you to a customized page where you can quickly upload and publish your article to ScholarsArchive@OSU. Please have a PDF of your publication ready.
+  For guidance on what version of the article you are allowed to upload, see our deposit guide:
+  %a{ href: 'https://guides.library.oregonstate.edu/Scholars-Archive/FacultyArticles' } https://guides.library.oregonstate.edu/Scholars-Archive/FacultyArticles.
+%p
+%stong
+  Use this link to deposit your publication into ScholarsArchive:
   = claim_url(@author_publication[:claim_link])
 %p
-  Once there, you may upload your article, and publish the article to ScholarsArchive@OSU. For guidance on the version of the article you are allowed to upload, see our deposit guide.
-  %a{ href: 'https://guides.library.oregonstate.edu/Scholars-Archive/FacultyArticles' } https://guides.library.oregonstate.edu/Scholars-Archive/FacultyArticles
+%strong
+  Why do this?
+  %br
+  OSU’s Faculty Senate passed an Open Access Policy in June 2013:
+  %a{ href: 'https://senate.oregonstate.edu/sites/senate.oregonstate.edu/files/openaccesspolicy_june2013.pdf' } https://senate.oregonstate.edu/sites/senate.oregonstate.edu/files/openaccesspolicy_june2013.pdf
 %p
-  Questions? Please follow up with us at
-  %a{ mailto: 'scholarsarchive@oregonstate.edu' } scholarsarchive@oregonstate.edu
+  Questions? Please visit %a{ href: 'https://osulibrary.oregonstate.edu/oa-faq' } https://osulibrary.oregonstate.edu/oa-faq
+  for more information or follow up with us at scholarsarchive@oregonstate.edu
 %p
   Sincerely,
   %br
-  The OSU Libraries Digital Repository Team
+  OSU Libraries Digital Repository Team
+  %a{ href: 'mailto:scholarsarchive@oregonstate.edu' } scholarsarchive@oregonstate.edu
