Create a footer partial

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,3 +12,5 @@
       = render partial: 'layouts/flash_messages'
       = yield
       = console if Rails.env == 'development'
+  %footer
+    = render partial: 'layouts/footer'
