revise haml tags and css for footer

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,4 +13,5 @@
       = yield
       = console if Rails.env == 'development'
   %footer
-    = render partial: 'layouts/footer'
+    .container-fluid
+      = render partial: 'layouts/footer'
