--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,8 @@ body > .container-fluid {
   padding-top: 25px;
   padding-bottom: 25px;
 }
+
+footer > .container-fluid {
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
