--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,10 +1,11 @@
 %p
-  Easy Deposit 2 is a service of %a{ https://ir.library.oregonstate.edu/} Oregon State University Libraries \& Press
+  Easy Deposit 2 is a service of
+  %a{ href: 'https://library.oregonstate.edu/' } Oregon State University Libraries & Press
 %p
   121 The Valley Library
   %br
     Corvallis, OR 97331-4501
 %p
-  Copyright \&copy; #{Time.now.year} Oregon State University
+  Copyright &copy; #{Time.now.year} Oregon State University
 %p
-  %a{ mailto: 'scholarsarchive@oregonstate.edu' } Contact Us
+  %a{ href: 'mailto:scholarsarchive@oregonstate.edu' } Contact Us
