Correct errors with haml tags in article recruit email

--- a/app/views/article_recruit_mailer/recruit_email.html.haml
+++ b/app/views/article_recruit_mailer/recruit_email.html.haml
@@ -4,22 +4,23 @@
 %p
   As part of OSU’s Open Access Policy, faculty are asked to deposit their journal articles into ScholarsArchive@OSU.
   This makes your research publicly available and increases the reach and impact of your scholarship.
-%p
+  %br
   The link below will take you to a customized page where you can quickly upload and publish your article to ScholarsArchive@OSU. Please have a PDF of your publication ready.
   For guidance on what version of the article you are allowed to upload, see our deposit guide:
   %a{ href: 'https://guides.library.oregonstate.edu/Scholars-Archive/FacultyArticles' } https://guides.library.oregonstate.edu/Scholars-Archive/FacultyArticles.
-%p
-%stong
-  Use this link to deposit your publication into ScholarsArchive:
-  = claim_url(@author_publication[:claim_link])
-%p
-%strong
-  Why do this?
   %br
-  OSU’s Faculty Senate passed an Open Access Policy in June 2013:
-  %a{ href: 'https://senate.oregonstate.edu/sites/senate.oregonstate.edu/files/openaccesspolicy_june2013.pdf' } https://senate.oregonstate.edu/sites/senate.oregonstate.edu/files/openaccesspolicy_june2013.pdf
+    %strong
+      Use this link to deposit your publication into ScholarsArchive:
+      = claim_url(@author_publication[:claim_link])
+  %br
+    %strong
+      Why do this?
+  %br
+    OSU’s Faculty Senate passed an Open Access Policy in June 2013:
+    %a{ href: 'https://senate.oregonstate.edu/sites/senate.oregonstate.edu/files/openaccesspolicy_june2013.pdf' } https://senate.oregonstate.edu/sites/senate.oregonstate.edu/files/openaccesspolicy_june2013.pdf
 %p
-  Questions? Please visit %a{ href: 'https://osulibrary.oregonstate.edu/oa-faq' } https://osulibrary.oregonstate.edu/oa-faq
+  Questions? Please visit
+  %a{ href: 'https://osulibrary.oregonstate.edu/oa-faq' } https://osulibrary.oregonstate.edu/oa-faq
   for more information or follow up with us at scholarsarchive@oregonstate.edu
 %p
   Sincerely,
