haml tag requires at the beginning of the line or correctly indent

--- a/app/views/publications/_file_table.html.haml
+++ b/app/views/publications/_file_table.html.haml
@@ -14,6 +14,7 @@
   %br
   Any further update to the article should be made in ScholarsArchive@OSU.
   %p
-  For questions about open access policy, ScholarsArchive@OSU, and Easy Deposit 2, please email %a{ href: 'mailto:scholarsarchive@oregonstate.edu' } scholarsarchive@oregonstate.edu
+  For questions about open access policy, ScholarsArchive@OSU, and Easy Deposit 2, please email
+  %a{ href: 'mailto:scholarsarchive@oregonstate.edu' } scholarsarchive@oregonstate.edu
 - else
   .bg-danger.text-light.no-files-attached= t('publications.no_files_attached_message')
