--- a/app/views/publications/_attached_files.html.haml
+++ b/app/views/publications/_attached_files.html.haml
@@ -3,6 +3,8 @@
   = render 'file_form'
 = render 'file_table'
 %p
-  As author of the article, please upload the article manuscript and supplementary files (e.g., data sets) to comply with Oregon State University’s %a{ href: 'https://senate.oregonstate.edu/sites/senate.oregonstate.edu/files/openaccesspolicy_june2013.pdf' } Open Access Policy.
+  As author of the article, please upload the article manuscript and supplementary files (e.g., data sets) to comply with Oregon State University’s
+  %a{ href: 'https://senate.oregonstate.edu/sites/senate.oregonstate.edu/files/openaccesspolicy_june2013.pdf' } Open Access Policy.
   %br
-  For more details about the Open Access Policy, please check the %a{ href: 'https://osulibrary.oregonstate.edu/oa-faq#why' } FAQ page.
+    For more details about the Open Access Policy, please check the
+    %a{ href: 'https://osulibrary.oregonstate.edu/oa-faq#why' } FAQ page.
