--- a/app/views/publications/_record.html.haml
+++ b/app/views/publications/_record.html.haml
@@ -10,8 +10,9 @@
   - if @publication.published? || @publication.publication_exists?
     %span= t('publications.publication_date_message', pub_at: @publication[:pub_at])
     - if @publication[:pub_url]
-      %br
-      %a{ href: @publication[:pub_url], target: '_blank' }= @publication[:pub_url]
+    %br
+      %strong
+        %a{ href: @publication[:pub_url], target: '_blank' }= @publication[:pub_url]
 - unless r.publication
   %i No publication record created.
 - else
