--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,4 +15,12 @@ body > .container-fluid {
 footer > .container-fluid {
   padding-top: 25px;
   padding-bottom: 25px;
+  border-top: solid 1px #aaa;
+  font-size: 0.7rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  text-align: right;
 }
