Create a footer partial (#178)
* Create a footer partial

* revise haml tags and css for footer

* add css of footer to application.scss

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,3 +12,6 @@
       = render partial: 'layouts/flash_messages'
       = yield
       = console if Rails.env == 'development'
+  %footer
+    .container-fluid
+      = render partial: 'layouts/footer'
