--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,10 +17,9 @@ footer > .container-fluid {
   padding-bottom: 25px;
   border-top: solid 1px #aaa;
   font-size: 0.7rem;
-  position: absolute;
+  position: relative;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 100px;
   text-align: right;
 }
