--- a/app/views/publish_mailer/published_email.text.haml
+++ b/app/views/publish_mailer/published_email.text.haml
@@ -1,12 +1,10 @@
-Thank you for depositing your article,
+Thank you for depositing your article:
 = @publication.web_of_science_source_record.record.title.first
-, in ScholarsArchive@OSU.
 
 The permanent URL for your article is:
 = @publication.pub_url
 
-If you have any further questions, concerns, or feedback about your experience with ScholarsArchive@OSU or the OSU Open Access Policy, please contact us at
-scholarsarchive@oregonstate.edu
+If you have any questions, please contact us at scholarsarchive@oregonstate.edu
 
-Best,
-The OSU Libraries Digital Repository Team
+Sincerely,
+OSU Libraries Digital Repository Team
