--- a/app/views/article_recruit_mailer/recruit_email.text.haml
+++ b/app/views/article_recruit_mailer/recruit_email.text.haml
@@ -1,17 +1,13 @@
 Congratulations on your new publication!
 = @publication.web_of_science_source_record.record.title.first
 
-As part of OSU’s Open Access Policy, faculty are asked to deposit their journal articles into ScholarsArchive@OSU.
-This makes your research publicly available and increases the reach and impact of your scholarship.
-
-The link below will take you to a customized page where you can quickly upload and publish your article to ScholarsArchive@OSU. Please have a PDF of your publication ready.
-For guidance on what version of the article you are allowed to upload, see our deposit guide: https://guides.library.oregonstate.edu/Scholars-Archive/FacultyArticles.
+The link below will take you to a customized page where you can quickly upload and publish your article to ScholarsArchive@OSU. Please have a PDF of your publication ready. For guidance on what version of the article you are allowed to upload, see our deposit guide: https://guides.library.oregonstate.edu/Scholars-Archive/FacultyArticles.
 
 Use this link to deposit your publication into ScholarsArchive:
 = claim_url(@author_publication[:claim_link]) if @author_publication
 
 Why do this?
-OSU’s Faculty Senate passed an Open Access Policy in June 2013: https://senate.oregonstate.edu/sites/senate.oregonstate.edu/files/openaccesspolicy_june2013.pdf
+OSU’s Faculty Senate passed an Open Access Policy in June 2013 (https://senate.oregonstate.edu/sites/senate.oregonstate.edu/files/openaccesspolicy_june2013.pdf). As part of OSU’s Open Access Policy, faculty are asked to deposit their journal articles into ScholarsArchive@OSU. This makes your research publicly available and increases the reach and impact of your scholarship.
 
 Questions? Please visit https://osulibrary.oregonstate.edu/oa-faq for more information or follow up with us at scholarsarchive@oregonstate.edu
 
