ux updates for style and instructions

--- a/app/assets/stylesheets/publications.scss
+++ b/app/assets/stylesheets/publications.scss
@@ -25,10 +25,14 @@
     font-weight: lighter;
   }
 
+  .tiny {
+    font-size: 0.7rem;
+  }
+
   .attach-files {
     margin-bottom: 20px;
     .custom-file-label:after {
-      content: "Upload";
+      content: "Browse";
     }
   }
 
