--- a/app/views/publications/_publish_button.html.haml
+++ b/app/views/publications/_publish_button.html.haml
@@ -1,12 +1,11 @@
+:javascript
+  $(function() {
+    $('.btn.publish').on('click', function(e) {
+      window.location.href = "#{publication_publish_path(@wos_record.uid)}"
+    })
+  })
+
 .row.justify-content-center
-  .btn.btn-success.col-3.col-md-5.publish{ 'data-toggle' => 'modal', 'data-target' => '#publish_modal_center' }
+  .btn.btn-success.col-3.col-md-5.publish
     %i.material-icons backup
     Publish
-  #publish_modal_center.modal.fade{tabindex: '-1', role: 'dialog', 'aria-labelledby' => 'publish_modal_center_title', 'aria-hidden' => 'true'}
-    .modal-dialog.modal-dialog-centered{role: 'document'}
-      .modal-content
-        .modal-body
-          = t('confirm.publish').html_safe
-        .modal-footer
-          %button.btn.btn-secondary{type: 'button', 'data-dismiss' => 'modal'} Cancel
-          = link_to "Publish", publication_publish_path(@wos_record.uid), method: :get, class: 'btn btn-success'
